PenTest-CSRF-Fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,23 @@ spring.datasource.initialization-mode=embedded
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 logging.level.org.springframework.security=DEBUG
+
+#SSL
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+server.ssl.key-password=password
+
 server.port = 8081
+
+#Secure Cookies
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.max-age=-1
+server.servlet.session.cookie.secure=true
 
 #prod/dev
 
 spring.profiles.active=prod
-
 #SPRING RESOURCE HANDLING
 spring.resources.static-locations=classpath:/static/,classpath:/resources/,classpath:/resources/static/,classpath:/META-INF/resources/
 
