--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ def profile1 = "dev"
 
 
 dependencies {
-
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
