PenTest-Session-Vulnerable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,12 @@ server.ssl.key-password=password
 server.port = 8081
 
 #Secure Cookies
-server.servlet.session.cookie.http-only=true
-server.servlet.session.cookie.max-age=-1
-server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.http-only=true
+#server.servlet.session.cookie.max-age=-30m
+#server.servlet.session.cookie.secure=true
+
+#Session Management
+#server.servlet.session.timeout=30m
 
 #prod/dev
 
